- Place goal in fixed position. Better readable until we have "focused" boxes.

--- a/proviola/ppcoqdoc/proviola.css
+++ b/proviola/ppcoqdoc/proviola.css
@@ -5,7 +5,9 @@ div.code {
 
 div.goal {
   width: 50%;
-  float: right;
+  position: fixed;
+  left: 55%;
+  bottom: 0;
 }
 
 div.doc {
